# xiaohongshu-agent

./: .env  .env.example  .gitignore  .gitmodules  CLAUDE.md  CONFIG_GUIDE.md  LLM_CONFIG.md  OPENROUTER_GUIDE.md  QUICKSTART.md  README.md  TOOLS_MECHANISM.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py
.claude/agents/: content-writer.md  gemini-nano-image-generator.md  web-multi-platform-researcher.md  xiaohongshu-publisher.md  xiaohongshu-research-writer.md
posts/20251231-005443-上海租房攻略/: project.json
posts/20260102-031405-西安公司避坑指南/: content.json  research.json
posts/20260102-032638-西安公司避坑指南/: content.json  research.json
posts/20260102-033819-西安公司避坑指南/: content.json  research.json
posts/20260102-050925-西安公司避坑指南/: content.json  research.json
posts/20260102-063154-西安公司避坑指南/: research.json
prompts/: __init__.py  content.yaml  content_review.yaml  image.yaml  image_review.yaml  research.yaml  research_review.yaml  review.yaml
src/: main.py
src/agents/: content.py  image.py  image_review.py  research.py  review.py
src/models/: schemas.py
src/utils/: anthropic_provider.py  download_manager.py  file_ops.py  retry_handler.py
xhs_agent/: __init__.py  graph.py  state.py
xhs_agent/nodes/: __init__.py  generate_images.py  init_project.py  publish.py  research_xhs.py  synthesize.py
xhs_agent/tools/: __init__.py  browser.py  deep_search_playwright.py  file_ops.py  image_generation.py  playwright_browser.py
