[project]
name = "xiaohongshu-agent"
version = "0.2.0"
description = "Xiaohongshu content creation agent powered by Pydantic-AI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pydantic-ai[mcp]>=0.1.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.13.2",
    "python-dotenv>=1.2.1",
]

[project.scripts]
xhs-agent = "src.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/xiaohongshu-agent"
Repository = "https://github.com/yourusername/xiaohongshu-agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
