[project]
name = "xiaohongshu-agent"
version = "0.2.0"
description = "Xiaohongshu content creation agent powered by Pydantic-AI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    # 本地 pydantic-ai（从 submodules 加载）
    "pydantic-ai-slim",
    "pydantic-graph",
    # LLM Provider
    "anthropic>=0.40.0",
    # 其他依赖
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.13.2",
    "python-dotenv>=1.2.1",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "opentelemetry-api>=1.0.0",
    # Logfire（可观测性）
    "logfire>=2.0.0",
    # Prompt 管理
    "pyyaml>=6.0.0",
]

[tool.uv.sources]
pydantic-ai-slim = { path = "submodules/pydantic-ai/pydantic_ai_slim", editable = true }
pydantic-graph = { path = "submodules/pydantic-ai/pydantic_graph", editable = true }

[project.scripts]
xhs-agent = "src.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/xiaohongshu-agent"
Repository = "https://github.com/yourusername/xiaohongshu-agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "prompts"]
